# cumf_ccd

./: .appveyor.yml  .gitignore  .travis.linux.sh  .travis.osx.sh  .travis.yml  CMakeLists.txt  README  README.md  appveyor.yml  sonar-project.properties
.ci/: travis_linux  travis_osx
data/Yahoo_music/: meta  meta_modified_all
data/jester2/: meta_modified_all
data/ml-20m/: meta_modified_all
data/ml10M/: meta_modified_all
data/netflix/: meta_modified_all
data/yahoo/: meta_modified_all
scripts/: travis_linux
src/: ccdp_gpu.cu  cdmf_ref.cpp  common.h  cuda_common.h  cuda_fusedR.h  cuda_updateH.h  device_utilities.cu  device_utilities.h  extras.cpp  extras.h  helper_fusedR.h  helper_updateH.h  main.cpp  main.cu  pmf_util.h  util.cpp  util.h  utilities.cpp  utilities.h  utils_extra.hpp
